hphp/hack/test/typecheck/noreturn_usage.php.exp
File "noreturn_usage.php", line 10, characters 29-31:
You are using the return value of a `void` function (Typing[4119])
  File "noreturn_usage.php", line 7, characters 15-18:
  A `void` function doesn't return a value.
File "noreturn_usage.php", line 10, characters 24-26:
You are using the return value of a `noreturn` function (Typing[4133])
  File "noreturn_usage.php", line 3, characters 15-22:
  A `noreturn` function always throws or exits.
